# deepin-font-manager

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  font-manager.pro  linglong.yaml
.reuse/: dep5
.tx/: config  transifex.yaml
arm64/: linglong.yaml
debian/: changelog  control  control.1  deepin-font-manager.1  deepin-font-manager.install  deepin-font-manager.postrm  deepin-font-manager.substvars  files  libdeepin-font-installer-dev.install  libdeepin-font-installer.install  libdeepin-font-manager-dev.install  libdeepin-font-manager.install  libdeepin-font-manager.substvars  rules
deepin-font-manager/: CMakeLists.txt  DDLabel.cpp  DDLabel.h  bmp.qrc  ddlabel.cpp  ddlabel.h  deepin-font-manager  deepin-font-manager.desktop  deepin-font-manager.pro  deepin-font-manager.qrc  globaldef.h  main.cpp  multifilepage.h  performancemonitor.cpp  performancemonitor.h  singlefontapplication.cpp  singlefontapplication.h  utils.cpp  utils.h
deepin-font-manager-assets/: deepin-font-manager.desktop  font-manager_pm.sh
deepin-font-manager/interfaces/: dcomworker.cpp  dcomworker.h  dfmdbmanager.cpp  dfmdbmanager.h  dfmxmlwrapper.cpp  dfmxmlwrapper.h  dfontbasedialog.cpp  dfontbasedialog.h  dfontfilewatcher.cpp  dfontfilewatcher.h  dfontmenumanager.cpp  dfontmenumanager.h  dfontpreviewer.cpp  dfontpreviewer.h  dfontpreviewitemdef.h  dfontpreviewitemdelegate.cpp  dfontpreviewitemdelegate.h  dfontpreviewlistdatathread.cpp  dfontpreviewlistdatathread.h  dfontpreviewlistview.cpp  dfontpreviewlistview.h  dfontpreviewproxymodel.cpp  dfontpreviewproxymodel.h  dsqliteutil.cpp  dsqliteutil.h  getuseraddfontthread.cpp  getuseraddfontthread.h  loadfontdatathread.cpp  loadfontdatathread.h
deepin-font-manager/policy-install-translation/: policy_ne.ts
deepin-font-manager/policy-uninstall-translation/: policy_ne.ts
deepin-font-manager/translations/: deepin-font-manager.ts  deepin-font-manager_ar.ts  deepin-font-manager_ca.ts  deepin-font-manager_cs.ts  deepin-font-manager_da.ts  deepin-font-manager_de.ts  deepin-font-manager_es.ts  deepin-font-manager_fi.ts  deepin-font-manager_fr.ts  deepin-font-manager_hr.ts  deepin-font-manager_it.ts  deepin-font-manager_ko.ts  deepin-font-manager_ms.ts  deepin-font-manager_ne.ts  deepin-font-manager_nl.ts  deepin-font-manager_pl.ts  deepin-font-manager_pt.ts  deepin-font-manager_pt_BR.ts  deepin-font-manager_ru.ts  deepin-font-manager_sr.ts  deepin-font-manager_tr.ts  deepin-font-manager_uk.ts  deepin-font-manager_zh_CN.ts  deepin-font-manager_zh_TW.ts
deepin-font-manager/views/: dfdeletedialog.cpp  dfdeletedialog.h  dfinstallerrordialog.cpp  dfinstallerrordialog.h  dfinstallerroritemmodel.h  dfinstallerroritemwidget.cpp  dfinstallerroritemwidget.h  dfinstallerrorlistview.cpp  dfinstallerrorlistview.h  dfinstallnormalwindow.cpp  dfinstallnormalwindow.h  dfontinfodialog.cpp  dfontinfodialog.h  dfontinfoscrollarea.cpp  dfontinfoscrollarea.h  dfontmgrmainwindow.cpp  dfontmgrmainwindow.cpp.autosave  dfontmgrmainwindow.h  dfontspinner.cpp  dfontspinner.h  dfontspinnerwidget.cpp  dfontspinnerwidget.h  dfontuninstalldialog.cpp  dfontuninstalldialog.h  dfquickinstallwindow.cpp  dfquickinstallwindow.h  dinstallerrorlistview.cpp  dinstallerrorlistview.h  dsplitlistwidget.cpp  dsplitlistwidget.h  fonticontext.cpp  fonticontext.h
deepin-font-preview-plugin/: CMakeLists.txt  deepin-font-preview-plugin.pro  fontpreview.cpp  fontpreview.h  main.cpp  main.moc  moc_predefs.h
dfont-install/: dfont-install  dfont-install.pro  main.cpp
dfont-uninstall/: dfont-uninstall  main.cpp
libdeepin-font-manager/: dcopyfilesmanager.cpp  dcopyfilesmanager.h  dfmdbmanager.cpp  dfmdbmanager.h  dfontinfomanager.cpp  dfontinfomanager.h  dfontloadthread.cpp  dfontloadthread.h  dfontmanager.cpp  dfontmanager.h  dfontpreview.cpp  dfontpreview.h  dfontpreviewitemdef.h  dfontwidget.cpp  dfontwidget.h  dfreetypeutil.cpp  dsqliteutil.cpp  dsqliteutil.h  fontmanagercore.cpp  fontmanagercore.h  libdeepin-font-manager.prl  libdeepin-font-manager.pro  signalmanager.cpp  signalmanager.h
libdeepin-font-manager/pkgconfig/: deepin-font-manager.pc
libdeepin-font-manager/schemas/: com.deepin.font-manager.gschema.xml
loong64/: linglong.yaml
mips64/: linglong.yaml
rpm/: deepin-font-manager.spec
sw64/: linglong.yaml
test/: CMakeLists.txt
test/src/: ut_dcopyfilesmanager.cpp  ut_dfmdbmanager.cpp  ut_dfmxmlwrapper.cpp  ut_dfontbasedialog.cpp  ut_dfontinfodialog.cpp  ut_dfontloadthread.cpp  ut_dfontmanager.cpp  ut_dfontmgrmainwindow.cpp  ut_dfontpreview1.cpp  ut_dfontpreviewLib.cpp  ut_dfontpreviewlistview.cpp  ut_dfontspinnerwidget.cpp  ut_dfontwidget.cpp  ut_dsplitlistwidget.cpp  ut_fonticontext.cpp  ut_performancemonitor.cpp  ut_signalmanager.cpp
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/include/: commonheaderfile.h
tests/src/: main.cpp  ut_dcopyfilesmanager.cpp  ut_dfinstallerrorlistview.cpp  ut_dfmdbmanager.cpp  ut_dfontInfo.cpp  ut_dfontbasedialog.cpp  (+16 more)
translations/: deepin-font-manager.ts  deepin-font-manager_ady.ts  deepin-font-manager_af.ts  deepin-font-manager_am_ET.ts  deepin-font-manager_ar.ts  deepin-font-manager_ast.ts  deepin-font-manager_az.ts  deepin-font-manager_bg.ts  deepin-font-manager_bn.ts  deepin-font-manager_bo.ts  deepin-font-manager_bqi.ts  deepin-font-manager_br.ts  deepin-font-manager_ca.ts  deepin-font-manager_cs.ts  deepin-font-manager_da.ts  deepin-font-manager_de.ts  deepin-font-manager_el.ts  deepin-font-manager_en.ts  deepin-font-manager_en_AU.ts  deepin-font-manager_eo.ts  deepin-font-manager_es.ts  deepin-font-manager_et.ts  deepin-font-manager_eu.ts  deepin-font-manager_fa.ts  deepin-font-manager_fi.ts  deepin-font-manager_fil.ts  deepin-font-manager_fr.ts  deepin-font-manager_gl_ES.ts  deepin-font-manager_he.ts  deepin-font-manager_hi_IN.ts  deepin-font-manager_hr.ts  deepin-font-manager_hu.ts  deepin-font-manager_hy.ts  deepin-font-manager_id.ts  deepin-font-manager_it.ts  deepin-font-manager_ja.ts  deepin-font-manager_ka.ts  deepin-font-manager_km_KH.ts  deepin-font-manager_kn_IN.ts  deepin-font-manager_ko.ts  (+38 more)
(+117 files in other folders)
